Added logo and image

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
 
 <header class="head">
-    <div class="grid head-top">
-        <div class="logo unit unit-s-1-2 unit-m-1-2 unit-l-1-2">
-            <a href="index.html"><img src="images/redbox-holder-2.png"></a>
+    <div class="head-top">
+        <div class="logo">
+            <a href="index.html"><img src="images/webit-logo.svg"></a>
             <a href="#nav" class="nav-btn" data-state="inactive">Navigate</a>
         </div>
-        <div class="unit unit-s-1-2 unit-m-1-2 unit-l-1-2">
+        <div class="">
             <nav class="nav nav-top" data-state="collapsed">
                 <ul>
                     <li><a href="">Login</a></li>
@@ -32,7 +32,7 @@
 <div>
     <h1>Your Website, Your Way</h1>
     <h2>Customize websites, free of code.</h2>
-    <img src="">
+    <img class="greendrops" src="images/billboard-image-green.jpg" alt="Green Droplet Image">
     <div>
         <button type="submit">Get Started</button>
     </div>
