--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
     
 <div class="billboard">
     <img class="greendrops" src="images/billboard-image-green.jpg" alt="Green Droplet Image">
-    <div class="grid">
-        <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
-            <h1>Your Website, Your Way</h1>
-            <h2>Customize websites, free of code.</h2>
-        </div>
-        <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
-            <button type="submit">Get Started</button>
+    <div class="billboardtext">
+        <div class="grid">
+            <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
+                <h1>Your Website, Your Way</h1>
+                <h2>Customize websites, free of code.</h2>
+            </div>
+            <div class="getstarted unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
+                <button type="submit">Get Started</button>
+            </div>
         </div>
     </div>
 </div>
@@ -84,7 +86,7 @@
     <q>Quotation</q><p>—Name here</p>
 </div>
     
-<footer class="grid">
+<footer class="foot island grid">
     <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2">
         <p>© Copyright webit</p>
     </div>
