Changed Button to Link

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <h2>Customize websites, free of code.</h2>
             </div>
             <div class="getstarted unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
-                <button type="submit">Get Started</button>
+                <a href><p>Get Started</p></a>
             </div>
         </div>
     </div>
@@ -91,7 +91,7 @@
         <p>© Copyright webit</p>
     </div>
      <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2">
-        <button type="submit">Get Started</button>
+         <a href><p>Get Started</p></a>
     </div>
 </footer>   
 
