Added headers element in CSS
Styled h3 text

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 </div>
 
 <div>
-    <h3>Choose Your Template</h3>
+    <h3 class="tera island headers">Choose Your Template</h3>
     <img src="http://placehold.it/350x150">
 </div>
 
-<h3>Features</h3>
+<h3 class="tera island headers">Features</h3>
     
 <div class="grid">
     <div class="box1 island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
