--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
     </div>
 </div>
     
-<div>
-    <q class="quote">Quotation</q><p>—Name here</p>
+<div class="island-double">
+    <q>Quotation</q>
+    <span>—Person's name</span>
 </div>
     
 <footer class="foot island grid">
