Changed q to blockquote
Tried editing CSS contents of blockquote

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
     </div>
 </div>
     
-<div class="island-double">
-    <q>Quotation</q>
-    <span>—Person's name</span>
+<div class="island-double quotation">
+    <blockquote>Quotation</blockquote>
+    <span class="quotename">—Person's name</span>
 </div>
     
 <footer class="foot island grid">
