Styled blockquote span
Took out old span class

--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
 </div>
     
 <div class="island-double quotation">
-    <blockquote>Quotation</blockquote>
-    <span class="quotename">—Person's name</span>
+    <blockquote>Quotation<span>—Person's name</span></blockquote>
 </div>
     
 <footer class="foot island grid">
