--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <h2>Customize websites, free of code.</h2>
             </div>
             <div class="getstarted unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
-                <a href><p>Get Started</p></a>
+                <a href><p class="tera push-0">Get Started</p></a>
             </div>
         </div>
     </div>
@@ -88,9 +88,9 @@
     
 <footer class="foot island grid">
     <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2">
-        <p>© Copyright webit</p>
+        <p class="copyright kilo">© Copyright webit</p>
     </div>
-     <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2">
+     <div class="getstarted unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2">
          <a href><p>Get Started</p></a>
     </div>
 </footer>   
