Added "top" skip-link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <li><a href="#main">Skip to main content</a></li>
 </ul>    
     
-<header class="head" role="banner">
+<header class="head" role="banner" id="top">
     <div class="head-top">
         <div class="logo">
             <a href="index.html"><img src="images/webit-logo.svg"></a>
@@ -95,7 +95,7 @@
     
 <footer class="foot island grid" role="contentinfo">
     <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2">
-        <p class="copyright kilo">© Copyright webit</p>
+        <p class="copyright kilo">© Copyright webit</p><a href="#top" class="toplink milli">Top</a>
     </div>
      <div class="getstarted unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2">
          <a href><p>Get Started</p></a>
