--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
             <h4 class="giga feature">Templates</h4>
             <p class="mega feature">description</p>
         </div>
-        <div class="box3 island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+        <div class="box3 island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-push-m-1-2 unit-l-1-2 unit-push-l-1-2">
             <img src="">
         </div>
-        <div class="box4 island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+        <div class="box4 island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-pull-m-1-2 unit-l-1-2 unit-pull-l-1-2">
             <h4 class="giga feature">Domains</h4>
             <p class="mega feature">description</p>
         </div>
