--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
             <h4 class="giga feature">Built-In Mobile</h4>
             <p class="mega feature">description</p>
         </div>
-        <div class="box4 island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+        <div class="box4 island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-push-m-1-2 unit-l-1-2 unit-push-l-1-2">
             <img src="">
         </div>
-        <div class="box1 island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+        <div class="box2 island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-pull-m-1-2 unit-l-1-2 unit-pull-l-1-2">
             <h4 class="giga feature">24/7 Customer Service</h4>
             <p class="mega feature">description</p>
         </div>
