Added alt tags and img links in HTML

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <header class="head" role="banner" id="top">
     <div class="head-top">
         <div class="logo">
-            <a href="index.html"><img src="images/webit-logo.svg"></a>
+            <a href="index.html"><img src="images/webit-logo.svg" alt="Green Droplets"></a>
         </div>
         <div>
             <nav class="nav" role="navigation" id="nav">
@@ -44,7 +44,7 @@
                     <h2>Customize websites, free of code.</h2>
                 </div>
                 <div class="getstarted unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
-                    <a href><p class="tera push-0">Get Started</p></a>
+                    <a href=""><p class="tera push-0">Get Started</p></a>
                 </div>
             </div>
         </div>
@@ -52,35 +52,35 @@
 
     <div>
         <h3 class="tera island headers3">Choose Your Template</h3>
-        <img src="http://placehold.it/350x150">
+        <img src="http://placehold.it/350x150" alt="Template">
     </div>
 
     <h3 class="tera island headers3">Features</h3>
 
     <div class="grid">
         <div class="box1 island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-            <img src="">
+            <img src="hello" alt="Template Icon">
         </div>
         <div class="box2 island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
             <h4 class="giga feature">Templates</h4>
             <p class="mega feature">description</p>
         </div>
         <div class="box3 island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-push-m-1-2 unit-l-1-2 unit-push-l-1-2">
-            <img src="">
+            <img src="hello" alt="Domain Icon">
         </div>
         <div class="box4 island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-pull-m-1-2 unit-l-1-2 unit-pull-l-1-2">
             <h4 class="giga feature">Domains</h4>
             <p class="mega feature">description</p>
         </div>
         <div class="box1 island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-            <img src="">
+            <img src="hello" alt="Built-In Mobile Icon">
         </div>
           <div class="box2 island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
             <h4 class="giga feature">Built-In Mobile</h4>
             <p class="mega feature">description</p>
         </div>
         <div class="box4 island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-push-m-1-2 unit-l-1-2 unit-push-l-1-2">
-            <img src="">
+            <img src="hello" alt="Customer Service Icon">
         </div>
         <div class="box2 island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-pull-m-1-2 unit-l-1-2 unit-pull-l-1-2">
             <h4 class="giga feature">24/7 Customer Service</h4>
@@ -98,7 +98,7 @@
         <p class="copyright kilo">© Copyright webit</p><a href="#top" class="toplink milli">Top</a>
     </div>
      <div class="getstarted unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2">
-         <a href><p>Get Started</p></a>
+         <a href=""><p>Get Started</p></a>
     </div>
 </footer>   
 
