Changed alt tag for Webit logo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <header class="head" role="banner" id="top">
     <div class="head-top">
         <div class="logo">
-            <a href="index.html"><img src="images/webit-logo.svg" alt="Green Droplets"></a>
+            <a href="index.html"><img src="images/webit-logo.svg" alt="Webit logo"></a>
         </div>
         <div>
             <nav class="nav" role="navigation" id="nav">
