--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
 </header>
     
 <main role="main" id="main">   
-    <div class="billboard">
-        <img class="greendrops" src="images/billboard-image-green.jpg" alt="Green Droplet Image">
+    <div>
+        <div class="billboard">
+            <img class="greendrops" src="images/billboard-image-green.jpg" alt="Green Droplet Image">
+        </div>
         <div class="billboardtext">
             <div class="grid">
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
