Added background-image in CSS
Took away position: relative

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 <main role="main" id="main">   
     <div>
         <div class="billboard">
-            <img class="greendrops" src="images/billboard-image-green.jpg" alt="Green Droplet Image">
+            <!-- <img class="greendrops" src="images/billboard-image-green.jpg" alt="Green Droplet Image">
+        </div>  -->
         </div>
         <div class="billboardtext">
             <div class="grid">
