Billboard text fix
Changed left and right % in CSS to move text over

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <!-- <img class="greendrops" src="images/billboard-image-green.jpg" alt="Green Droplet Image">
         </div>  -->
         </div>
-        <div class="billboardtext">
-            <div class="grid">
+        <div class="billboardtext grid">
+ 
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
                     <h1>Your Website, Your Way</h1>
                     <h2>Customize websites, free of code.</h2>
@@ -49,7 +49,7 @@
                 <div class="getstarted unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
                     <a href=""><p class="tera push-0">Get Started</p></a>
                 </div>
-            </div>
+
         </div>
     </div>
 
