Billboard fix - Text positioning

--- a/index.html
+++ b/index.html
@@ -35,23 +35,16 @@
 </header>
     
 <main role="main" id="main">   
-    <div>
-        <div class="billboard">
-            <!-- <img class="greendrops" src="images/billboard-image-green.jpg" alt="Green Droplet Image">
-        </div>  -->
-        </div>
-        <div class="billboardtext grid">
- 
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
+
+            <div class="billboard grid grid-middle">
+                    <div class="billboardtext unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
                     <h1>Your Website, Your Way</h1>
                     <h2>Customize websites, free of code.</h2>
                 </div>
                 <div class="getstarted unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
                     <a href=""><p class="tera push-0">Get Started</p></a>
                 </div>
-
         </div>
-    </div>
 
     <div>
         <h3 class="tera island headers3">Choose Your Template</h3>
