Changed quotation in CSS
styling

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
 
     <div class="island-double quotation">
-        <blockquote>Quotation<span>—Person's name</span></blockquote>
+        <blockquote>Quotation<br>—Person's name</blockquote>
     </div>
 </main>
     
