Edited CSS and took out image
Edited button CSS
Edited Blockquote CSS
Took out image to clear white space on mobile (FIX)

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                     <h2>Customize websites, free of code.</h2>
                 </div>
                 <div class="getstarted unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
-                    <a href=""><p class="tera push-0">Get Started</p></a>
+                    <a href=""><p class="kilo push-0">Get Started</p></a>
                 </div>
         </div>
 
     <div>
         <h3 class="tera island headers3">Choose Your Template</h3>
-        <img src="http://placehold.it/350x150" alt="Template">
+        <img src="hello" alt="Template">
     </div>
 
     <h3 class="tera island headers3">Features</h3>
@@ -94,7 +94,7 @@
         <p class="copyright kilo">© Copyright webit</p><a href="#top" class="toplink milli">Top</a>
     </div>
      <div class="getstarted unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2">
-         <a href=""><p>Get Started</p></a>
+         <a href=""><p class="kilo push-0">Get Started</p></a>
     </div>
 </footer>   
 
