New billboard Image
Took out unnecessary blockquote span
Added island and colour to billboard text

--- a/index.html
+++ b/index.html
@@ -35,16 +35,15 @@
 </header>
     
 <main role="main" id="main">   
-
-            <div class="billboard grid grid-middle">
-                    <div class="billboardtext unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
-                    <h1>Your Website, Your Way</h1>
-                    <h2>Customize websites, free of code.</h2>
-                </div>
-                <div class="getstarted unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
-                    <a href=""><p class="kilo push-0">Get Started</p></a>
-                </div>
+    <div class="billboard grid grid-middle">
+        <div class="billboardtext island unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">
+            <h1>Your Website, Your Way</h1>
+            <h2>Customize websites, free of code.</h2>
         </div>
+        <div class="getstarted island unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">
+            <a href=""><p class="kilo push-0">Get Started</p></a>
+        </div>
+    </div>
 
     <div>
         <h3 class="tera island headers3">Choose Your Template</h3>
