Removed grid-middle from billboard

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </header>
     
 <main role="main" id="main">   
-    <div class="billboard grid grid-middle">
+    <div class="billboard grid">
         <div class="billboardtext island unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">
             <h1>Your Website, Your Way</h1>
             <h2>Customize websites, free of code.</h2>
