sign up page changes

--- a/signup.html
+++ b/signup.html
@@ -33,3 +33,43 @@
         </div>
     </div>
 </header>
+  
+<main role="main" id="main">
+
+    <div class="island">
+        <form method="post">
+
+            <h1 class="centreform">Sign Up</h1>
+
+            <div>  
+                <label for="name">Full Name</label>
+                <input class="boxlength push-half" id="name">
+            </div> 
+
+            <div>  
+                <label for="email">E-mail</label>
+                <input class="boxlength push-half" id="email">
+            </div> 
+
+            <div>  
+                <label for="age">Password</label>
+                <input class="boxlength push-half" id="age">
+            </div>
+
+            <div class="island centreform">
+                <button type="signup">Sign Up</button>
+            </div>
+
+        </form>
+    </div>
+    
+</main>
+    
+<footer class="foot island grid" role="contentinfo">
+    <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2">
+        <p class="copyright kilo">© Copyright webit <a href="#top" class="toplink milli">Top</a></p>
+    </div>
+     <div class="getstarted-footer unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2">
+         <a href=""><p class="kilo push-0">Get Started</p></a>
+    </div>
+</footer>  
