--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h1>Your Website, Your Way</h1>
             <h2>Customize websites, free of code.</h2>
             <div class="getstarted">
-                <a href=""><p class="kilo push-0">Get Started</p></a>
+                <a href="signup.html"><p class="kilo push-0">Get Started</p></a>
             </div>
         </div>
         
@@ -62,30 +62,30 @@
             <p class="mega feature">Our large variety of templates are sure to make your website look amazing. They use the most up to date HTML, CSS and Javascript techniques.</p>
         </div>
         <div class="box1 island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-push-m-1-2 unit-l-1-2 unit-push-l-1-2">
-            <img src="images/domain-icon.svg" alt="Domain Icon">
+            <img src="images/domain-icon-new.svg" alt="Domain Icon">
         </div>
         <div class="box2 island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-pull-m-1-2 unit-l-1-2 unit-pull-l-1-2">
             <h4 class="giga feature">Domains</h4>
             <p class="mega feature">Webit allows you to have your very own custom domain. Making it easy to maintain your website.</p>
         </div>
         <div class="box1 island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-            <img src="images/mobile-icon.svg" alt="Built-In Mobile Icon">
+            <img src="images/mobile-icon-new.svg" alt="Built-In Mobile Icon">
         </div>
           <div class="box2 island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
             <h4 class="giga feature">Built-In Mobile</h4>
-            <p class="mega feature">description</p>
+            <p class="mega feature">Designed for mobile use. Made to look great on mobile screen sizes.</p>
         </div>
         <div class="box1 island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-push-m-1-2 unit-l-1-2 unit-push-l-1-2">
-            <img src="images/service-icon.svg" alt="Customer Service Icon">
+            <img src="images/service-icon-new.svg" alt="Customer Service Icon">
         </div>
         <div class="box2 island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-pull-m-1-2 unit-l-1-2 unit-pull-l-1-2">
             <h4 class="giga feature">24/7 Customer Service</h4>
-            <p class="mega feature">description</p>
+            <p class="mega feature">Get answers fast when contacting our support team.</p>
         </div>
     </div>
 
     <div class="island-double quotation">
-        <blockquote>Quotation<br>—Person's name</blockquote>
+        <blockquote>I like the ease of use. It makes everything so fast and simple. I can get on and get off in a flash.<br>—Joe www.theorganicgallery.com</blockquote>
     </div>
 </main>
     
