added pricing content
added links for get started buttons

--- a/signup.html
+++ b/signup.html
@@ -70,6 +70,9 @@
         <p class="copyright kilo">© Copyright webit <a href="#top" class="toplink milli">Top</a></p>
     </div>
      <div class="getstarted-footer unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2">
-         <a href=""><p class="kilo push-0">Get Started</p></a>
+         <a href="signup.html"><p class="kilo push-0">Get Started</p></a>
     </div>
-</footer>  
+</footer> 
+    
+</body>
+</html>
