Entered new grid

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="billboard">
         <div class="billboardtext island">
             <h1>Your Website, Your Way</h1>
-            <h2>Customize websites, free of code.</h2>
+            <h2 class="giga nonbold">Customize websites, free of code.</h2>
             <div class="getstarted">
                 <a href="signup.html"><p class="kilo push-0">Get Started</p></a>
             </div>
@@ -91,7 +91,7 @@
     
 <footer class="foot island grid" role="contentinfo">
     <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2">
-        <p class="copyright kilo">© Copyright webit <a href="#top" class="toplink milli">Top</a></p>
+        <p class="copyright kilo">© Copyright Webit <a href="#top" class="toplink milli">Top</a></p>
     </div>
      <div class="getstarted-footer unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2">
          <a href="signup.html"><p class="kilo push-0">Get Started</p></a>
