--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,7 @@
     <link href="css/typography.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
 </head>
-<body>
+<body class="signuppage">
 
 <ul class="skip-links">
     <li><a href="#nav">Skip to Navigation</a></li>
@@ -34,10 +34,10 @@
     </div>
 </header>
   
-<main role="main" id="main">
+<main role="main" id="main" class="signupmain">
 
     <div class="island">
-        <form method="post">
+        <form method="post" action="thanks.html">
 
             <h1 class="centreform">Sign Up</h1>
 
@@ -56,8 +56,8 @@
                 <input class="boxlength push-half" id="age">
             </div>
 
-            <div class="island centreform">
-                <button type="signup">Sign Up</button>
+            <div class="island centreform submit">
+                <button type="submit" a href="thanks.html">Submit</button>
             </div>
 
         </form>
@@ -67,7 +67,7 @@
     
 <footer class="foot island grid" role="contentinfo">
     <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2">
-        <p class="copyright kilo">© Copyright webit <a href="#top" class="toplink milli">Top</a></p>
+        <p class="copyright kilo">© Copyright Webit <a href="#top" class="toplink milli">Top</a></p>
     </div>
      <div class="getstarted-footer unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2">
          <a href="signup.html"><p class="kilo push-0">Get Started</p></a>
