--- a/pricing.html
+++ b/pricing.html
@@ -38,42 +38,49 @@
     <div class="billboard">
         <div class="billboardtext island">
             <h1>Pricing fit for you</h1>
-            <h2>100% Satisfaction Guaranteed</h2>
+            <h2 class="giga nonbold">100% Satisfaction Guaranteed</h2>
             <div class="getstarted">
-                <a href=""><p class="kilo push-0">Get Started</p></a>
+                <a href="signup.html"><p class="kilo push-0">Get Started</p></a>
             </div>
         </div>
 
     </div>
     
     <div class="grid">
-        <div class="box3 island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-1-4">
-            <p>FREE</p>
-            <p>$0/month</p>
-            <p>Includes 5 pages, Custom Domain, 24/7 Customer Support. You can host your very own site for free.</p>
+        <div class="island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4">
+            <div class="box3 island">
+                <p class="price-title peta">FREE</p>
+                <p class="price yotta">$0/month</p>
+                <p>Includes 5 pages, Custom Domain, 24/7 Customer Support. You can host and customize your very own site for free.</p>
+            </div>
         </div>
-        <div class="box3 island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-1-4">
-            <p>Personal</p>
-            <p>$1/month</p>
-            <p>Includes 8 pages, Custom Domain, 150 GB Bandwidth, Mobile Website, 2GB of Storage, 24/7 Customer Support.</p>
+        <div class="island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4">
+            <div class="box3 island">
+                <p class="price-title peta">Personal</p>
+                <p class="price yotta">$1/month</p>
+                <p>Includes 8 pages, Custom Domain, 150 GB Bandwidth, Mobile Website, 2GB of Storage, 24/7 Customer Support.</p>
+            </div>
         </div>
-        </div>
-        <div class="box3 island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-1-4">
-            <p>Pro</p>
-            <p>$16/month</p>
-            <p>Includes 20 pages, Custom Domain, 500 GB Bandwidth, Mobile Website, 10 GB storage, 24/7 Customer Support.</p>
-        </div>
-        <div class="box3 island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-1-4">
-            <p>Business</p>
-            <p>$24/month</p>
-            <p>Unlimited pages, Custom Domain, 1000 GB Bandwidth, Mobile Website, 50 GB storage, 24/7 Customer Support.</p>
-        </div>
-    </div>   
+        <div class="island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4">
+            <div class="box3 island">
+                <p class="price-title peta">Pro</p>
+                <p class="price yotta">$16/month</p>
+                <p>Includes 20 pages, Custom Domain, 500 GB Bandwidth, Mobile Website, 10 GB storage, 24/7 Customer Support.</p>
+            </div>
+            </div>
+        <div class="island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4">
+            <div class="box3 island">
+                <p class="price-title peta">Business</p>
+                <p class="price yotta">$24/month</p>
+                <p>Unlimited pages, Custom Domain, 1000 GB Bandwidth, Mobile Website, 50 GB storage, 24/7 Customer Support.</p>
+            </div>
+        </div>  
+    </div>
 </main>
     
 <footer class="foot island grid" role="contentinfo">
     <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2">
-        <p class="copyright kilo">© Copyright webit <a href="#top" class="toplink milli">Top</a></p>
+        <p class="copyright kilo">© Copyright Webit <a href="#top" class="toplink milli">Top</a></p>
     </div>
      <div class="getstarted-footer unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2">
          <a href="signup.html"><p class="kilo push-0">Get Started</p></a>
