Placed content in thank you page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div class="template">
         <h3 class="tera island headers3">Choose Your Template</h3>
-        <img class="template-image" src="images/template-saas.svg" alt="Template">
+        <img src="images/template-saas.svg" alt="Template">
     </div>
 
     <h3 class="tera island headers3" id="features">Features</h3>
@@ -85,7 +85,7 @@
     </div>
 
     <div class="island-double quotation">
-        <blockquote>I like the ease of use. It makes everything so fast and simple. I can get on and get off in a flash.<br>—Joe www.theorganicgallery.com</blockquote>
+        <blockquote class="giga">I like the ease of use. It makes everything so fast and simple. I can get on and get off in a flash.<br>—Joe www.theorganicgallery.com</blockquote>
     </div>
 </main>
     
