--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,7 @@
     <link href="css/typography.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
 </head>
-<body class="signuppage">
+<body class="blackfill signup-back">
 
 <ul class="skip-links">
     <li><a href="#nav">Skip to Navigation</a></li>
@@ -34,7 +34,7 @@
     </div>
 </header>
   
-<main role="main" id="main" class="signupmain">
+<main role="main" id="main" class="whitefill">
 
     <div class="island">
         <form method="post" action="thanks.html">
