--- a/thanks.html
+++ b/thanks.html
@@ -9,7 +9,7 @@
     <link href="css/typography.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
 </head>
-<body>
+<body class="blackfill">
 
 <ul class="skip-links">
     <li><a href="#nav">Skip to Navigation</a></li>
@@ -34,6 +34,19 @@
     </div>
 </header>
     
-
+<main role="main" id="main"> 
+    <div class="island whitefill">
+        <h1 class="thankyou pad-top-double gutter exa">Thank-you for joining us!</h1>
+        <p class="thankyou giga">You can now start customizing your website</p>
+        <a href="#"><p class="here giga">Here</p></a>   
+    </div>
+</main>
+   
+<footer class="foot island grid" role="contentinfo">
+    <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2">
+        <p class="copyright kilo">© Copyright Webit <a href="#top" class="toplink milli">Top</a></p>
+    </div>
+</footer>     
+    
 </body>
 </html>
