tested billboard sizing

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
 
     <div class="island-double quotation">
-        <blockquote class="giga">I like the ease of use. It makes everything so fast and simple. I can get on and get off in a flash.<br>—Joe www.theorganicgallery.com</blockquote>
+        <blockquote class="kilo">I like the ease of use. It makes everything so fast and simple. I can get on and get off in a flash.<br>—Joe www.theorganicgallery.com</blockquote>
     </div>
 </main>
     
