--- a/pricing.html
+++ b/pricing.html
@@ -49,28 +49,28 @@
     <div class="grid">
         <div class="island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4">
             <div class="box3 island">
-                <p class="price-title peta">FREE</p>
+                <p class="price-title tera">FREE</p>
                 <p class="price yotta">$0/month</p>
                 <p>Includes 5 pages, Custom Domain, 24/7 Customer Support. You can host and customize your very own site for free.</p>
             </div>
         </div>
         <div class="island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4">
             <div class="box3 island">
-                <p class="price-title peta">Personal</p>
+                <p class="price-title tera">Personal</p>
                 <p class="price yotta">$1/month</p>
                 <p>Includes 8 pages, Custom Domain, 150 GB Bandwidth, Mobile Website, 2GB of Storage, 24/7 Customer Support.</p>
             </div>
         </div>
         <div class="island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4">
             <div class="box3 island">
-                <p class="price-title peta">Pro</p>
+                <p class="price-title tera">Pro</p>
                 <p class="price yotta">$16/month</p>
                 <p>Includes 20 pages, Custom Domain, 500 GB Bandwidth, Mobile Website, 10 GB storage, 24/7 Customer Support.</p>
             </div>
             </div>
         <div class="island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4">
             <div class="box3 island">
-                <p class="price-title peta">Business</p>
+                <p class="price-title tera">Business</p>
                 <p class="price yotta">$24/month</p>
                 <p>Unlimited pages, Custom Domain, 1000 GB Bandwidth, Mobile Website, 50 GB storage, 24/7 Customer Support.</p>
             </div>
