--- a/pricing.html
+++ b/pricing.html
@@ -80,7 +80,8 @@
     
 <footer class="foot island grid" role="contentinfo">
     <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2">
-        <p class="copyright kilo">© Copyright Webit <a href="#top" class="toplink milli">Top</a></p>
+        <p class="copyright pad-bottom-half kilo">© Copyright Webit</p>
+        <a href="#top" class="toplink milli">Top</a>
     </div>
      <div class="getstarted-footer unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2">
          <a href="signup.html"><p class="kilo push-0">Get Started</p></a>
