--- a/thanks.html
+++ b/thanks.html
@@ -44,7 +44,7 @@
    
 <footer class="foot island grid" role="contentinfo">
     <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2">
-        <p class="copyright kilo">© Copyright Webit <a href="#top" class="toplink milli">Top</a></p>
+        <p class="copyright kilo">© Copyright Webit</p>
     </div>
 </footer>     
     
