Added link to free pricing

--- a/pricing.html
+++ b/pricing.html
@@ -48,11 +48,13 @@
     
     <div class="grid">
         <div class="island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4">
-            <div class="box3 island">
-                <p class="price-title tera">FREE</p>
-                <p class="price exa">$0/month</p>
-                <p class="kilo">Includes 5 pages, Custom Domain, 24/7 Customer Support. You can host and customize your very own site for free.</p>
-            </div>
+            <a href="signup.html" style="text-decoration:none">
+                <div class="box3 island">
+                    <p class="price-title tera">FREE</p>
+                    <p class="price exa">$0/month</p>
+                    <p class="kilo">Includes 5 pages, Custom Domain, 24/7 Customer Support. You can host and customize your very own site for free.</p>
+                </div>
+            </a>
         </div>
         <div class="island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4">
             <div class="box3 island">
