Fix for thank you page
Added method=“get”

--- a/signup.html
+++ b/signup.html
@@ -34,7 +34,7 @@
     </div>
 </header>
   
-<main role="main" id="main" class="whitefill">
+<main role="main" id="main" class="whitefill" method="get">
 
     <div class="island">
         <form method="post" action="thanks.html">
