Moved method="get"

--- a/signup.html
+++ b/signup.html
@@ -34,10 +34,10 @@
     </div>
 </header>
   
-<main role="main" id="main" class="whitefill" method="get">
+<main role="main" id="main" class="whitefill">
 
     <div class="island">
-        <form method="post" action="thanks.html">
+        <form method="get" action="thanks.html">
 
             <h1 class="centreform">Sign Up</h1>
 
