--- a/pricing.html
+++ b/pricing.html
@@ -43,7 +43,6 @@
                 <a href="signup.html"><p class="kilo push-0">Get Started</p></a>
             </div>
         </div>
-
     </div>
     
     <div class="grid">
@@ -57,25 +56,31 @@
             </a>
         </div>
         <div class="island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4">
-            <div class="box3 island">
-                <p class="price-title tera">Personal</p>
-                <p class="price exa">$1/month</p>
-                <p class="kilo">Includes 8 pages, Custom Domain, 150 GB Bandwidth, Mobile Website, 2GB of Storage, 24/7 Customer Support.</p>
-            </div>
+            <a href="signup.html" style="text-decoration:none">
+                <div class="box3 island">
+                    <p class="price-title tera">Personal</p>
+                    <p class="price exa">$1/month</p>
+                    <p class="kilo">Includes 8 pages, Custom Domain, 150 GB Bandwidth, Mobile Website, 2GB of Storage, 24/7 Customer Support.</p>
+                </div>
+            </a>
         </div>
         <div class="island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4">
-            <div class="box3 island">
-                <p class="price-title tera">Pro</p>
-                <p class="price exa">$16/month</p>
-                <p class="kilo">Includes 20 pages, Custom Domain, 500 GB Bandwidth, Mobile Website, 10 GB storage, 24/7 Customer Support.</p>
-            </div>
+            <a href="signup.html" style="text-decoration:none">
+                <div class="box3 island">
+                    <p class="price-title tera">Pro</p>
+                    <p class="price exa">$16/month</p>
+                    <p class="kilo">Includes 20 pages, Custom Domain, 500 GB Bandwidth, Mobile Website, 10 GB storage, 24/7 Customer Support.</p>
+                </div>
+            </a>
             </div>
         <div class="island unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4">
-            <div class="box3 island">
-                <p class="price-title tera">Business</p>
-                <p class="price exa">$24/month</p>
-                <p class="kilo">Unlimited pages, Custom Domain, 1000 GB Bandwidth, Mobile Website, 50 GB storage, 24/7 Customer Support.</p>
-            </div>
+            <a href="signup.html" style="text-decoration:none">
+                <div class="box3 island">
+                    <p class="price-title tera">Business</p>
+                    <p class="price exa">$24/month</p>
+                    <p class="kilo">Unlimited pages, Custom Domain, 1000 GB Bandwidth, Mobile Website, 50 GB storage, 24/7 Customer Support.</p>
+                </div>
+            </a>
         </div>  
     </div>
 </main>
