Added hover the "here" link

--- a/thanks.html
+++ b/thanks.html
@@ -38,7 +38,7 @@
     <div class="island whitefill">
         <h1 class="thankyou pad-top-double gutter exa">Thank-you for joining us!</h1>
         <p class="thankyou giga">You can now start customizing your website</p>
-        <a href="#"><p class="here giga">Here</p></a>   
+        <a href="#" style="text-decoration:none"><p class="here giga">Here</p></a>   
     </div>
 </main>
    
